--- a/src/contentScripts/index.css
+++ b/src/contentScripts/index.css
@@ -9,8 +9,8 @@
 
 #sync-raise-a-hand__controller {
   position: fixed;
-  top: 30px;
-  left: 30px;
+  top: 70px;
+  left: 20px;
   background-color: #3c4043;
   border-radius: 5px;
   box-shadow: 0 7px 18px rgba(0,0,0,0.2);
@@ -26,20 +26,20 @@
 }
 
 
-.sync-raise-a-hand__controller__switch-wrapper {
+#sync-raise-a-hand__controller__switch-wrapper {
   position: relative;
   width: 46px;
   height: 22px;
 }
 
-.sync-raise-a-hand__controller__switch {
+#sync-raise-a-hand__controller__switch {
   position: absolute;
   display: inline-block;
   font-size: 16px;
   line-height: 1.5;
 }
 
-.sync-raise-a-hand__controller__switch > input {
+#sync-raise-a-hand__controller__switch > input {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -60,13 +60,13 @@
   transition: opacity 0.3s 0.1s, transform 0.2s 0.1s;
 }
 
-.sync-raise-a-hand__controller__switch > span {
+#sync-raise-a-hand__controller__switch > span {
   display: inline-block;
   width: 100%;
   cursor: pointer;
 }
 
-.sync-raise-a-hand__controller__switch > span::before {
+#sync-raise-a-hand__controller__switch > span::before {
   content: "";
   float: right;
   display: inline-block;
@@ -79,7 +79,7 @@
   transition: background-color 0.2s, opacity 0.2s;
 }
 
-.sync-raise-a-hand__controller__switch > span::after {
+#sync-raise-a-hand__controller__switch > span::after {
   content: "";
   position: absolute;
   top: 2px;
@@ -92,42 +92,42 @@
   transition: background-color 0.2s, transform 0.2s;
 }
 
-.sync-raise-a-hand__controller__switch > input:checked {
+#sync-raise-a-hand__controller__switch > input:checked {
   right: -10px;
   background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
 }
 
-.sync-raise-a-hand__controller__switch > input:checked + span::before {
+#sync-raise-a-hand__controller__switch > input:checked + span::before {
   background-color: rgba(var(--pure-material-primary-rgb, 33, 150, 243), 0.6);
 }
 
-.sync-raise-a-hand__controller__switch > input:checked + span::after {
+#sync-raise-a-hand__controller__switch > input:checked + span::after {
   background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
   transform: translateX(16px);
 }
 
-.sync-raise-a-hand__controller__switch:hover > input {
+#sync-raise-a-hand__controller__switch:hover > input {
   opacity: 0.04;
 }
 
-.sync-raise-a-hand__controller__switch > input:focus {
+#sync-raise-a-hand__controller__switch > input:focus {
   opacity: 0.12;
 }
 
-.sync-raise-a-hand__controller__switch:hover > input:focus {
+#sync-raise-a-hand__controller__switch:hover > input:focus {
   opacity: 0.16;
 }
 
-.sync-raise-a-hand__controller__switch > input:active {
+#sync-raise-a-hand__controller__switch > input:active {
   opacity: 1;
   transform: scale(0);
   transition: transform 0s, opacity 0s;
 }
 
-.sync-raise-a-hand__controller__switch > input:active + span::before {
+#sync-raise-a-hand__controller__switch > input:active + span::before {
   background-color: rgba(var(--pure-material-primary-rgb, 33, 150, 243), 0.6);
 }
 
-.sync-raise-a-hand__controller__switch > input:checked:active + span::before {
+#sync-raise-a-hand__controller__switch > input:checked:active + span::before {
   background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
 }
